Replaced the old confirmation screen with the new general one used across the entire map inside View Group component. Changed the style of the old Latest Activity section of the Group Dashboard and filtered to show only content related ones. Temporarily replaced the home route with the Lists one. Fixed some missing gaps between elements

--- a/src/pages/Groups/Groups.module.css
+++ b/src/pages/Groups/Groups.module.css
@@ -1,5 +1,5 @@
 .groups {
-    height: calc(100dvh - var(--bottom-offset));
+    height: calc(100dvh - var(--navigation-height));
     width: 100dvw;
     display: grid;
     grid-template-rows: 50px 1fr;
@@ -82,7 +82,6 @@
     color: var(--text-color);
     padding: 15px;
     text-decoration: none;
-    border: 1px solid var(--white-10);
 }
 .group h3 {
     font-size: 1rem;
