--- a/src/pages/LocalList/LocalList.module.css
+++ b/src/pages/LocalList/LocalList.module.css
@@ -9,39 +9,12 @@
     position: relative;
     overflow: hidden;
 }
-.List .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.List .createdAt {
-    opacity: 0.5;
-}
-.List .header a,
-.List .header button {
-    height: 40px;
-    width: 40px;
-    background-color: transparent;
-    border: none;
-    display: flex;
-    align-items: center;
-}
-.List .header a svg,
-.header button svg {
-    height: 70%;
-    color: white;
-}
-.optionsButton svg {
-    height: 50% !important;
-    width: 50% !important;
-    justify-content: center;
-    margin-left: auto;
-}
+
 .listMeta {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding-bottom: 15px;
+    padding: 15px 0;
 }
 .listItemsContainer {
     display: flex;
