--- a/src/pages/ViewGroup/GroupDashboard/GroupDashboard.module.css
+++ b/src/pages/ViewGroup/GroupDashboard/GroupDashboard.module.css
@@ -1,7 +1,9 @@
 .groupDashboard {
-    display: grid;
-    grid-template-rows: auto 1fr;
+    display: flex;
+    flex-direction: column;
     gap: 10px;
+    height: 100%;
+    max-height: calc(100dvh - var(--navigation-height) - var(--page-header-height) - 10px);
 }
 
 .groupNavigation {
@@ -46,6 +48,8 @@
     flex-direction: column;
     padding: 10px;
     gap: 10px;
+    flex: 1;
+    overflow: hidden;
 }
 .sectionTitle {
     display: grid;
@@ -58,12 +62,12 @@
     overflow-y: auto;
     display: flex;
     flex-direction: column;
+    background-color: var(--item-bg);
+    padding: 20px;
+    border-radius: 10px;
+    flex: 1;
 }
 .log {
-    border-left: 1px solid var(--white-10);
-    padding-left: 20px;
-    margin-left: 10px;
-    position: relative;
     display: flex;
     padding-bottom: 25px;
     color: var(--text-color);
@@ -74,16 +78,17 @@
     flex-direction: column;
     gap: 10px;
     width: 100%;
+    font-size: 0.9rem;
+}
+.log .content p {
+    color: var(--white-50);
 }
 .log .content b {
     color: var(--white-25);
+    font-size: 0.75rem;
+    display: flex;
+    align-items: center;
 }
-.log .logCircle {
-    width: 10px;
-    height: 10px;
-    border-radius: 100%;
-    border: 1px solid var(--white-50);
-    position: absolute;
-    left: -5px;
-    top: 5px;
+.log .content b svg {
+    height: 0.85rem;
 }
